--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Kenze's Page of Quotes</title>
     <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/LetterM.svg/1200px-LetterM.svg.png"/>
+    <link rel="stylesheet" href="./style.css">
   </head>
+
   <body>
-    <h1>Let's get motivated!</h1>
+    <h1>Just do it!</h1>
+    <p>Believe in yourself!  </p>
+    <img src="./img.jpg">
+    <br>
+    <button onclick = "motivate()">Click me!</button>
+    <h1 id="displayText"></h1>
+    <script src="script.js"></script>
   </body>
 </html>
